# waveGen

./: CMakeLists.txt  Value.json  mainwindow.cpp  mainwindow.ui  waveclass.cpp  waveclass.h  wavheader.cpp  wavheader.h
